<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.HomeCoursesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/parent.contentLayout"
        android:paddingLeft="@dimen/normalPadding"
        android:paddingRight="@dimen/normalPadding"
        android:paddingBottom="@dimen/normalPadding">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hello_student"
                    style="@style/viewParent.headerText"
                    android:text="@string/hello_student" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">

                    <TextView
                        android:id="@+id/student_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="class 12th"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <ImageView
                        android:id="@+id/edit_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit_black_24dp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:minHeight="200dp"
                        app:cardBackgroundColor="#FF402D"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="@dimen/card_main_course_elevation"
                        app:cardPreventCornerOverlap="false">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Continue to \n\nMaths \n\nRelation and Functions"
                                android:textColor="@color/whiteBodyColor"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <!--<ProgressBar
                                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_width="150dp"
                                android:layout_height="5dp"
                                android:layout_marginTop="15dp"
                                android:progress="60"
                                android:progressDrawable="@drawable/progress_drawable" />-->

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:text="60% Complete"
                                android:textColor="@color/whiteBodyColor"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:elevation="@dimen/card_image_elevation"
                        android:src="@drawable/header_image" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        style="@style/viewParent.headerText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/subjects" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/see_all"
                        android:visibility="gone"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/headerMoreTextSize"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_subject_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>